<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Kansus Media Center</string>
    <string name="empty_string">Empty</string>
    <string name="music">Music</string>
    <string name="playlists">Playlists</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="video_download">Download</string>
    <string name="capture_video">Capture</string>
    <string name="picture">Picture</string>
    <string name="pictures">Pictures</string>
    <string name="slideshow_legend">Slideshow</string>
    <string name="capture_photo">Capture</string>
    <string name="radio">Radio</string>
    <string name="listen">Listen</string>
    <string name="my_radios">My Radios</string>
    <string name="radio_recordings">Recordings</string>
    <string name="tv">TV</string>
    <string name="watch">Watch</string>
    <string name="my_tvs">My TVs</string>
    <string name="tv_recordings">Recordings</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact\nus</string>
    <string name="bug_report">Bug\nReport</string>
    <string name="about">About</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="app_share_text">Teste agora o Kansus Media Center no seu Android</string>
    <string name="app_description">Kansus Media Center é uma aplicação Android capaz de reproduzir
         e converter vários tipos de mídia, além do poder de executar streamings de rádio e TV.</string>
    <string name="app_link">https://google.com</string>
    <string name="app_icon_url">http://www.facebookmobileweb.com/hackbook/img/facebook_icon_large.png</string>
    <string name="all_images">All pictures</string>
    <string name="all_videos">All videos</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="gallery_camera_media_bucket_name">Camera media</string>
    <string name="crop_label">Crop picture</string>
    <string name="view_label">View picture</string>
    <string name="preferences_label">Camera settings</string>
    <string name="wait">Please wait\u2026</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="wallpaper">Setting wallpaper, please wait\u2026</string>
    <string name="view">View</string>
    <string name="details">Details</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="slide_show">Slideshow</string>
    <string name="multiselect">Multiselect</string>
    <string name="camera_toss">Delete</string>
    <string name="camera_share">Share</string>
    <string name="camera_set">Set as</string>
    <string name="camera_play">Play</string>
    <string name="camera_attach">Attach</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_crop">Crop</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="savingImage">Saving picture\u2026</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_message">The picture will be deleted.</string>
    <string name="confirm_delete_video_message">The video will be deleted.</string>
    <string name="confirm_delete_multiple_message">These media files will be deleted.</string>
    <string name="no_way_to_share_image">No application available to share the picture.</string>
    <string name="no_way_to_share_video">No application available to share the video.</string>
    <string name="no_way_to_share">No application available to share the media file(s).</string>
    <string name="video_play">Play</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="pref_gallery_category">General settings</string>
    <string name="pref_slideshow_category">Slideshow settings</string>
    <string name="pref_gallery_size_title">Display size</string>
    <string name="pref_gallery_size_summary">Select the display size of pictures and videos</string>
    <string name="pref_gallery_size_dialogtitle">Picture size</string>
    <string-array name="pref_gallery_size_choices">
        <item>Large</item>
        <item>Small</item>
    </string-array>
    <string-array name="pref_gallery_size_values" translatable="false">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="default_value_pref_gallery_size" translatable="false">1</string>
    <string name="pref_gallery_sort_title">Sort order</string>
    <string name="pref_gallery_sort_summary">Select the sort order of pictures and videos</string>
    <string name="pref_gallery_sort_dialogtitle">Picture sort</string>
    <string-array name="pref_gallery_sort_choices">
        <item>Newest first</item>
        <item>Newest last</item>
    </string-array>
    <string-array name="pref_gallery_sort_values" translatable="false">
        <item>descending</item>
        <item>ascending</item>
    </string-array>
    <string name="default_value_pref_gallery_sort" translatable="false">descending</string>
    <string name="pref_gallery_slideshow_interval_title">Slideshow interval</string>
    <string name="pref_gallery_slideshow_interval_summary">Select how long each slide displays in the show</string>
    <string name="pref_gallery_slideshow_interval_dialogtitle">Slideshow interval</string>
    <string-array name="pref_gallery_slideshow_interval_choices">
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
    </string-array>
    <string-array name="pref_gallery_slideshow_interval_values" translatable="false">
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
    </string-array>
    <string name="default_value_pref_gallery_slideshow_interval" translatable="false">"2"</string>
    <string name="pref_gallery_slideshow_transition_title">Slideshow transition</string>
    <string name="pref_gallery_slideshow_transition_summary">Select the effect used when moving
         from one slide to the next</string>
    <string name="pref_gallery_slideshow_transition_dialogtitle">Slideshow transition</string>
    <string-array name="pref_gallery_slideshow_transition_choices">
        <item>Fade in &amp; out</item>
        <item>Slide left - right</item>
        <item>Slide up - down</item>
        <item>Random selection</item>
    </string-array>
    <string-array name="pref_gallery_slideshow_transition_values" translatable="false">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"-1"</item>
    </string-array>
    <string name="default_value_pref_gallery_slideshow_transition" translatable="false">"0"</string>
    <string name="pref_gallery_slideshow_repeat_title">Repeat slideshow</string>
    <string name="pref_gallery_slideshow_repeat_summary">Play slideshow more than once</string>
    <string name="pref_gallery_slideshow_shuffle_title">Shuffle slides</string>
    <string name="pref_gallery_slideshow_shuffle_summary">Show pictures in random order</string>
    <string name="camerasettings">Settings</string>
    <string name="image_gallery_NoImageView_text">No media found.</string>
    <string name="pref_gallery_confirm_delete_title">Confirm deletions</string>
    <string name="pref_gallery_confirm_delete_summary">Show confirmation before deleting a picture or video</string>
    <string name="details_panel_title">Details</string>
    <string name="details_file_size">File size:</string>
    <string name="details_image_resolution">Resolution:</string>
    <string name="details_image_make">Manufacturer:</string>
    <string name="details_image_model">Model:</string>
    <string name="details_image_whitebalance">WhiteBalance:</string>
    <string name="details_duration">Duration:</string>
    <string name="details_date_taken">Date taken:</string>
    <string name="details_frame_rate">Frame rate:</string>
    <string name="details_bit_rate">Bit rate:</string>
    <string name="details_codec">Codec:</string>
    <string name="details_format">Format:</string>
    <string name="details_dimension_x"><xliff:g id="width" example="640">%1$d</xliff:g> x <xliff:g id="height" example="480">%2$d</xliff:g></string>
    <string name="details_ms"><xliff:g id="minutes">%1$02d</xliff:g>:<xliff:g id="seconds">%2$02d</xliff:g></string>
    <string name="details_hms"><xliff:g id="hours">%1$d</xliff:g>:<xliff:g id="minutes">%2$02d</xliff:g>:<xliff:g id="seconds">%3$02d</xliff:g></string>
    <string name="details_fps"><xliff:g id="frames" example="30">%1$d</xliff:g> fps</string>
    <string name="details_kbps"><xliff:g id="speed" example="192">%1$d</xliff:g> Kbps</string>
    <string name="details_mbps"><xliff:g id="speed" example="2.3">%1$g</xliff:g> Mbps</string>
    <string name="details_ok">OK</string>
    <string name="context_menu_header">Picture options</string>
    <string name="video_context_menu_header">Video options</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="photos_gallery_title">Gallery</string>
    <string name="pick_photos_gallery_title">Select picture</string>
    <string name="videos_gallery_title">Gallery</string>
    <string name="pick_videos_gallery_title">Select video</string>
    <string name="sendImage">Share picture via</string>
    <string name="setImage">Set picture as</string>
    <string name="sendVideo">Share video via</string>
    <string name="send_media_files">Share media files via</string>
    <string name="movieviewlabel">Movies</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from <xliff:g id="duration" example="5:30">%s</xliff:g> ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="gadget_title">Picture frame</string>
    <string name="file_info_title">File info:</string>
    <string name="video_exceed_mms_limit">The video you recorded is too large to send via MMS.
         Try recording a shorter length clip.</string>
    <string name="multiselect_share">Share</string>
    <string name="multiselect_delete">Delete</string>
    <string name="multiselect_cancel">Cancel</string>
    <string name="delete_images_message">Deleting images, please wait\u2026</string>
    <string name="video_download_title">Video Download</string>
    <string name="menu_settings">Settings</string>
    <string name="paste_download_link">Paste download link here</string>
    <string name="download">Download</string>
    <string name="completed">Completed</string>
    <string name="no_format_selected">No format selected.</string>
    <string name="download_canceled">Download canceled.</string>
    <string name="download_completed">Download completed successfully.</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title:&#8201;</string>
    <string name="duration">Duration:&#8201;</string>
    <string name="size">"Size:&#8201;"</string>
    <string name="resolution">Original resolution:&#8201;</string>
    <string name="error_connecting">There was an error on trying to connect to the site.</string>
    <string name="starting_download">Starting download&#8230;</string>
    <string name="gathering_video_information">Please wait, gathering video information&#8230;</string>
    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
</resources>